# gptweather

./: .gitignore  ai-plugin.json  legal.txt  main.py  pyproject.toml  readme.md
.well-known/: ai-plugin.json  openapi.yaml
