[tool.poetry]
name = "chatgpt-weather-plugin"
version = "0.1.0"
description = ""
authors = ["@rUv"]

[tool.poetry.dependencies]
python = ">=3.10.0"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.10.2"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
quart = "0.15.0"
quart-cors = "^0.6.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"