[tool.poetry]
name = "weather-helper"
version = "0.1.0"
description = ""
authors = ["@rUv"]

[tool.poetry.dependencies]
python = "=3.11.2"
numpy = "^1.25.2"
Flask = "^2.2.2"
hypercorn = "^0.14.2"
urllib3 = "^2.0.4"
openai = "^0.10.2"
python-dotenv = "^1.0.0"
quart = "0.18.0"
quart-cors = "^0.6.0"
jinja2 = "^3.1.2"
# debugpy = "^1.6.7"

[tool.acpoetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
